Added descriptive lists and nav

--- a/crash1.html
+++ b/crash1.html
@@ -22,15 +22,45 @@
   <body>
     <h1>Hello World!</h1>
 
+    <hr />
+
+    <nav>
+      <ul>
+
+        <li>
+          <a href="/">Learning HTML</a>
+        </li>
+
+        <li>
+          <a href="/">Planning a Vacation</a>
+        </li>
+
+      </ul>
+    </nav>
+
+    <hr />
+
     <h2>Ready to Learn HTML!</h2>
     <p>This is the first web project sentence! (Nah not really :p)</p>
 
     <h3>My Daily Schedule</h3>
-    <p>Let me tell you how:
-      <br />...I learn more about web dev
-      <br />...I plan out my study plan
-      <br />...I use resources
-    </p>
+    <p>Let me tell you how:</p>
+    <ol>
+      <li>
+        ...I learn more about web dev
+      </li>
+      <li>
+        ...I plan out my study plan
+      </li>
+      <li>
+        ...I use resources from:
+        <abbr title="Mozilla Developer Network">
+          <a href="https://developer.mozilla.org/en-US/">
+            MDN
+          </a></abbr>
+      </li>
+    </ol>
+
 
     <h2>I am also planning a vacation (among other things)</h2>
     <p>Been fueling the midnight oil, so I might need one</p>
@@ -39,11 +69,21 @@
     </p>
 
     <h3>Places I'd like to Visit</h3>
-    <p>Here are a few places that sound wonderful:
-      <br />...I learn more about web dev
-      <br />...I plan out my study plan
-      <br />...I use resources
-    </p>
+    <p>Here are a few places that sound wonderful:</p>
+    <ul>
+      <li>
+        California, United States
+      </li>
+      <li>
+        Nova Scotia, Canada
+      </li>
+      <li>
+        I've heard good things about this museum:
+        <address>
+          New Brunswick, Atlantic Province, Canada
+        </address>
+      </li>
+    </ul>
 
     <h3>Places I'd like to Avoid</h3>
     <p>Here are a few places that sound dreadful:
@@ -51,5 +91,32 @@
       <br />...I plan out my study plan
       <br />...I use resources
     </p>
+
+    <h3>These are some of my favorite games</h3>
+    <p>I've been fascinated by these games recently:</p>
+    <dl>
+      <dt>Pokemon Arceus</dt>
+      <dd>
+        Something goes here
+      </dd>
+
+      <dt>Alchemy Stars</dt>
+      <dd>
+        Gacha puzzle mobile game. Art is great as well and they're pretty generous with player gifts and rewards...even for free to play players compared to other mobile gacha games.
+      </dd>
+
+      <dt>Monster Hunter Rise</dt>
+      <dd>
+        Who doesn't love the new furbuddy, the Palamute?! It's great to be able to travel faster than just running!
+      </dd>
+
+      <dt>Arknights</dt>
+      <dd>
+        The art is top tier, and the strategy concept is pretty fun to play.
+      </dd>
+    </dl>
+
+    <hr />
+    &lt;&lt;&lt; &copy;Yani Tiangco  &gt;&gt;&gt;
   </body>
 </html>
