added nav bar attributes

--- a/crash1.html
+++ b/crash1.html
@@ -35,6 +35,10 @@
           <a href="/">Planning a Vacation</a>
         </li>
 
+        <li>
+          Open<a href="https://www.youtube.com/watch?v=kUMe1FH4CHE&t=324s&ab_channel=freeCodeCamp.org" target="_blank"> YouTube </a>in a new Tab
+        </li>
+
       </ul>
     </nav>
 
@@ -118,5 +122,10 @@
 
     <hr />
     &lt;&lt;&lt; &copy;Yani Tiangco  &gt;&gt;&gt;
+
+    <p>
+      <a href="#">Back to Top</a>
+    </p>
+
   </body>
 </html>
