--- a/crash1.html
+++ b/crash1.html
@@ -20,27 +20,30 @@
     </style>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <h1>Hello World! These are my goals for the year:</h1>
 
-    <hr />
+      <hr />
 
-    <nav>
-      <ul>
+      <nav aria-label="primary-navigation ">
+        <ul>
 
-        <li>
-          <a href="/">Learning HTML</a>
-        </li>
+          <li>
+            <a href="/">Learning HTML</a>
+          </li>
 
-        <li>
-          <a href="/">Planning a Vacation</a>
-        </li>
+          <li>
+            <a href="/">Planning a Vacation</a>
+          </li>
 
-        <li>
-          Open<a href="https://www.youtube.com/watch?v=kUMe1FH4CHE&t=324s&ab_channel=freeCodeCamp.org" target="_blank"> YouTube </a>in a new Tab
-        </li>
+          <li>
+            Open<a href="https://www.youtube.com/watch?v=kUMe1FH4CHE&t=324s&ab_channel=freeCodeCamp.org" target="_blank"> YouTube </a>in a new Tab
+          </li>
 
-      </ul>
-    </nav>
+        </ul>
+      </nav>
+
+    </header>
 
     <hr />
 
@@ -120,12 +123,46 @@
       </dd>
     </dl>
 
+    <article id="contact">
+      <h2>Send A Message If You Wanna Reach Me</h2>
+      <p>
+        I'd really like to hear from you!
+      </p>
+
+      <form action="https://httpbin.org/get" method="get">
+        <p>
+          <label for="firstName">First Name</label>
+          <input type="text" name="firstName" id="firstName" placeholder="Pedro" autocomplete="on" autofocus required />
+        </p>
+
+        <p>
+          <label for="lastName">First Name</label>
+          <input type="text" name="lastName" id="lastName" placeholder="Hulio" autocomplete="on" />
+        </p>
+
+
+        <p>
+          <label for="password">Password</label>
+          <input type="password" name="password" id="password" placeholder="Enter a password" required />
+        </p>
+
+        <p>
+          <label for="password">Phone Number</label>
+          <input type="password" name="password" id="password" placeholder="Enter a password" required />
+        </p>
+
+      </form>
+
+    </article>
+
     <hr />
     &lt;&lt;&lt; &copy;Yani Tiangco  &gt;&gt;&gt;
+    <footer>
+      <p>
+        <a href="#">Back to Top</a>
+      </p>
+    </footer>
 
-    <p>
-      <a href="#">Back to Top</a>
-    </p>
 
   </body>
 </html>
